# serializer version: 1
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_with_dependencies_query_count
  '''
  SELECT "posthog_featureflag"."key" AS "key"
  FROM "posthog_featureflag"
  WHERE (NOT ("posthog_featureflag"."deleted")
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."key" IN ('flag-c-query-count',
                                             'flag-b-query-count',
                                             'flag-a-query-count')
         AND "posthog_featureflag"."team_id" = 99999)
  '''
# ---
# name: TestOrganizationFeatureFlagCopy.test_copy_feature_flag_with_dependencies_query_count.1
  '''
  SELECT "posthog_featureflag"."id" AS "id"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."deleted")
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."key" IN ('flag-c-query-count',
                                             'flag-b-query-count',
                                             'flag-a-query-count')
         AND "posthog_featureflag"."team_id" = 99999
         AND ("posthog_featureflag"."team_id" =
                (SELECT U0."parent_team_id" AS "parent_team_id"
                 FROM "posthog_team" U0
                 WHERE U0."id" = 99999
                 LIMIT 1)
              OR ("posthog_team"."parent_team_id" IS NULL
                  AND "posthog_featureflag"."team_id" = 99999)))
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."credentials_reviewed_at",
         "posthog_user"."requested_2fa_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."allow_impersonation",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."allow_sidebar_suggestions",
         "posthog_user"."shortcut_position",
         "posthog_user"."passkeys_enabled_for_2fa",
         "posthog_user"."hide_mcp_hints",
         "posthog_user"."ui_configuration",
         "posthog_user"."onboarding_skipped_at",
         "posthog_user"."onboarding_skipped_reason",
         "posthog_user"."onboarding_skipped_organization_id",
         "posthog_user"."onboarding_delegated_to_invite_id",
         "posthog_user"."onboarding_delegated_to_organization_id",
         "posthog_user"."onboarding_delegation_accepted_at",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE ("posthog_user"."is_active"
         AND "posthog_user"."id" = 99999)
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.1
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."uses_most_specific_access_resolution",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.10
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."uses_most_specific_access_resolution",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.11
  '''
  SELECT "posthog_featureflag"."id" AS "id"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."deleted")
         AND "posthog_featureflag"."key" = 'key-1'
         AND "posthog_featureflag"."team_id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */)
         AND ("posthog_featureflag"."team_id" =
                (SELECT U0."parent_team_id" AS "parent_team_id"
                 FROM "posthog_team" U0
                 WHERE U0."id" = 99999
                 LIMIT 1)
              OR ("posthog_team"."parent_team_id" IS NULL
                  AND "posthog_featureflag"."team_id" = 99999)))
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.12
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."uses_most_specific_access_resolution",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.13
  '''
  SELECT "posthog_featureflag"."id" AS "id"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."deleted")
         AND "posthog_featureflag"."key" = 'key-1'
         AND "posthog_featureflag"."team_id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */)
         AND ("posthog_featureflag"."team_id" =
                (SELECT U0."parent_team_id" AS "parent_team_id"
                 FROM "posthog_team" U0
                 WHERE U0."id" = 99999
                 LIMIT 1)
              OR ("posthog_team"."parent_team_id" IS NULL
                  AND "posthog_featureflag"."team_id" = 99999)))
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.14
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."updated_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."archived",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime",
         "posthog_featureflag"."bucketing_identifier",
         "posthog_featureflag"."last_called_at"
  FROM "posthog_featureflag"
  WHERE (NOT ("posthog_featureflag"."deleted")
         AND "posthog_featureflag"."key" = 'key-1'
         AND "posthog_featureflag"."team_id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */)
         AND "posthog_featureflag"."id" IN (1,
                                            2,
                                            3,
                                            4,
                                            5 /* ... */))
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.15
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."credentials_reviewed_at",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."requested_2fa_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."allow_impersonation",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."allow_sidebar_suggestions",
         "posthog_user"."shortcut_position",
         "posthog_user"."passkeys_enabled_for_2fa",
         "posthog_user"."hide_mcp_hints",
         "posthog_user"."ui_configuration",
         "posthog_user"."onboarding_skipped_at",
         "posthog_user"."onboarding_skipped_reason",
         "posthog_user"."onboarding_skipped_organization_id",
         "posthog_user"."onboarding_delegated_to_invite_id",
         "posthog_user"."onboarding_delegated_to_organization_id",
         "posthog_user"."onboarding_delegation_accepted_at",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.16
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."credentials_reviewed_at",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."requested_2fa_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."allow_impersonation",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."allow_sidebar_suggestions",
         "posthog_user"."shortcut_position",
         "posthog_user"."passkeys_enabled_for_2fa",
         "posthog_user"."hide_mcp_hints",
         "posthog_user"."ui_configuration",
         "posthog_user"."onboarding_skipped_at",
         "posthog_user"."onboarding_skipped_reason",
         "posthog_user"."onboarding_skipped_organization_id",
         "posthog_user"."onboarding_delegated_to_invite_id",
         "posthog_user"."onboarding_delegated_to_organization_id",
         "posthog_user"."onboarding_delegation_accepted_at",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.2
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."uses_most_specific_access_resolution",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.3
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."uses_most_specific_access_resolution",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.4
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."uses_most_specific_access_resolution",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.5
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."organization_id",
         "posthog_team"."project_id"
  FROM "posthog_team"
  WHERE "posthog_team"."organization_id" IN ('00000000-0000-0000-0000-000000000000'::uuid)
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.6
  '''
  SELECT "posthog_team"."id" AS "id"
  FROM "posthog_team"
  WHERE "posthog_team"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.7
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."ingested_production_event",
         "posthog_team"."ingested_production_event_last_checked_at",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_recording_trigger_groups",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."event_retention_months",
         "posthog_team"."conversations_enabled",
         "posthog_team"."conversations_settings",
         "posthog_team"."proactive_tasks_enabled",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."product_tours_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."logs_settings",
         "posthog_team"."llm_gateway_enabled_at",
         "posthog_team"."llm_gateway_revoked_at",
         "posthog_team"."llm_gateway_overspend_allowance_usd",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."require_evaluation_environment_tags",
         "posthog_team"."default_evaluation_contexts_enabled",
         "posthog_team"."require_evaluation_contexts",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time",
         "posthog_team"."default_experiment_confidence_level",
         "posthog_team"."default_experiment_stats_method",
         "posthog_team"."business_model"
  FROM "posthog_team"
  WHERE "posthog_team"."id" IN (1,
                                2,
                                3,
                                4,
                                5 /* ... */)
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.8
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."enforce_verified_domains",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_create_projects",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."members_can_see_org_members",
         "posthog_organization"."uses_most_specific_access_resolution",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."read_only_mcp_access",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."has_active_subscription",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.9
  '''
  SELECT "posthog_featureflag"."id" AS "id"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."deleted")
         AND "posthog_featureflag"."key" = 'key-1'
         AND "posthog_featureflag"."team_id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */)
         AND ("posthog_featureflag"."team_id" =
                (SELECT U0."parent_team_id" AS "parent_team_id"
                 FROM "posthog_team" U0
                 WHERE U0."id" = 99999
                 LIMIT 1)
              OR ("posthog_team"."parent_team_id" IS NULL
                  AND "posthog_featureflag"."team_id" = 99999)))
  '''
# ---
